organizando os itens enviados pela aline no github

--- a/editarchamado.html
+++ b/editarchamado.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/chamados.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="js/cadchamado.js"></script>
+    <script defer src="js/editchamado.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
@@ -27,13 +27,13 @@
         <nav id="sidebar">
             <ul class="list-unstyled components">
                 <h2>Help Desk</h2>
-                <li class="selecionado">
+                <li >
                     <a href="chamado.html">Chamados</a>
                 </li>
                 <li>
                     <a href="novochamado.html">Novo Chamado</a>
                 </li>
-                <li >
+                <li class="selecionado">
                     <a href="editarchamado.html">Editar Chamado</a>
                 <li>
                     <li >
@@ -53,7 +53,7 @@
                     </button>
             </nav>
      
-            <div >
+            <div  >
                 <table id="tblListar">
                 
                     </table>
