--- a/index.html
+++ b/index.html
@@ -18,10 +18,34 @@
     <!-- Login -->
     <div class="screen">
         <div class="leftside">
-        <img src="img/img2.png" alt="" >
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="2000">
+                    <img src="img/Logo Vivo Academy.png" class="d-block w-100" alt="..." >
+                    <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="img/Gama Academy.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/CH LogoII.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block"></div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </div>
+        <!-- <img src="img/img2.png" alt=""> -->
         <div class="righside"> 
-            <img src="img/logo2.fw.png" width="300px" height="auto"> 
+            <img src="img/logo2.fw.png" width="300px" height="auto" > 
             <h1 class="log1">Login</h1>
 
             <div class="form-floating mb-3">
