--- a/novochamado.html
+++ b/novochamado.html
@@ -33,7 +33,13 @@
                 <li class="selecionado">
                     <a href="novochamado.html">Novo Chamado</a>
                 </li>
+                <li >
+                    <a href="editarchamado.html">Editar Chamado</a>
                 <li>
+                    <li >
+                        <a href="excluirchamado.html">Excluir Chamado</a>
+                    <li>
+                <li> 
                     <a href="index.html">Sair</a>
                 </li>
             </ul>
