--- a/novochamado.html
+++ b/novochamado.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Area do Usuario</title>
+    <title>Área do Usuário</title>
 
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
 
 <body>
     <div class="sb1">
-        <!-- Sidebar  -->
+        <!-- Sidebar -->
         <nav id="sidebar">
             <ul class="list-unstyled components">
                 <h2>Help Desk</h2>
@@ -58,7 +58,7 @@
             <div>
                 <form id="frmCadastro">
                     <fieldset>
-                        <legend class="pl-1 pr-1" id="leg_pes">Novo Chamado</legend>
+                        <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Novo Chamado</b></legend>
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
@@ -74,17 +74,17 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group text-left">
-                                    <label class="form-label" for="txtEmail">Email</label>
+                                    <label class="form-label" for="txtEmail">Email:</label>
                                     <input class="form-control"  type="email" id="txtEmail"/>
                                 </div>
                             </div>
                         </div>
+                        <br>
 
                         <div class="row">
-                           
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
-                                    <label class="form-label" for="txtData">Data do Chamado</label>
+                                    <label class="form-label" for="txtData">Data do Chamado:</label>
                                     <input class="form-control" type="date" id="txtData"/>
                                 </div>
                             </div>
@@ -98,10 +98,10 @@
                                 <div class=" text-left" style="padding-top: 30px;">
                                     <li>
                                     <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" >
-                                        <option for="txtCategoria" selected>Categoria do Problema</option>
+                                        <option for="txtCategoria" selected>Categoria do Problema:</option>
                                         <option for="txtCategoria" value="Hardware">Hardware</option>
                                         <option for="txtCategoria" value="Software">Software</option>
-                                        <option for="txtCategoria" value="telefonia">telefonia</option>
+                                        <option for="txtCategoria" value="telefonia">Telefonia</option>
                                         <option for="txtCategoria" value="Rede">Rede</option>
                                         <option for="txtCategoria" value="Internet">Internet</option>
                                     </select>
@@ -111,8 +111,8 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtPrioridade"  class="form-select" aria-label="Default select example">
-                                            <option for="txtPrioridade" selected>Prioridade</option>
+                                        <select id="txtPrioridade"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
+                                            <option for="txtPrioridade" selected>Prioridade:</option>
                                             <option for="txtPrioridade" value="Alta">Alta</option>
                                             <option for="txtPrioridade" value="Media">Media</option>
                                             <option for="txtPrioridade" value="Baixa">Baixa</option>
@@ -122,15 +122,29 @@
                             </div>
                             
                         </div>
+                        <br>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-lg-8">
                                 <div class="form-group text-left">
                                     <li>
-                                        <label for="txtDescricao" class="form-label">Descricao do Problema</label>
+                                        <label for="txtDescricao" class="form-label">Descrição do Problema:</label>
                                         <textarea class="form-control" id="txtDescricao" rows="3"></textarea>
                                     </li>
                                 </div>
                             </div>
+                            <div class="col-lg-4">
+                                <div class="form-group text-left" style="padding-top: 30px;">
+                                    <li>
+                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
+                                            <option for="txtStatus" selected>Status:</option>
+                                            <option for="txtStatus" value="Alta">Aguardando Suporte</option>
+                                            <option for="txtStatus" value="Media">Em Análise</option>
+                                            <option for="txtStatus" value="Baixa">Em Atendimento</option>
+                                        </select>
+                                    </li>
+                                </div>
+                            </div>
+
                         </div>
                         <li style="padding-top: 31px;">
                             <input type="submit" value="Salvar" id="btnSalvar"/>
