--- a/chamado.html
+++ b/chamado.html
@@ -26,7 +26,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <ul class="list-unstyled components">
-                <h2>Help Dek</h2>
+                <h2>Help Desk</h2>
                 <li class="selecionado">
                     <a href="chamado.html">Chamados</a>
                 </li>
