atualização de layout e css

--- a/novochamado.html
+++ b/novochamado.html
@@ -27,21 +27,20 @@
         <nav id="sidebar">
             <ul class="list-unstyled components">
                 <h2>Help Desk</h2>
-                <li >
-                    <a href="chamado.html">Chamados</a>
-                </li>
                 <li class="selecionado">
                     <a href="novochamado.html">Novo Chamado</a>
                 </li>
-                <li >
-                    <a href="editarchamado.html">Editar Chamado</a>
                 <li>
-                    <li >
-                        <a href="excluirchamado.html">Excluir Chamado</a>
-                    <li>
-                <li> 
-                    <a href="index.html">Sair</a>
+                    <a href="editarchamado.html">Editar Chamado</a>
                 </li>
+                <li>
+                    <a href="excluirchamado.html">Excluir Chamado</a>
+                <li>
+                    <li>
+                        <a href="chamado.html">Listar Chamados</a>
+                <li>
+                    <a href="index.html">Sair</a>
+                </li>                    
             </ul>
         </nav>
         <!-- Page Content  -->
@@ -63,7 +62,7 @@
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
                                     <label class="form-label" for="txtCodigo">Código:</label>
-                                    <input class="form-control"type="number" id="txtCodigo" disabled/>
+                                    <input class="form-control"type="number" id="txtCodigo" disabled value="1"/>
                             </div>
                             </div>
                             <div class="col-lg-4">
@@ -152,10 +151,12 @@
                     </fieldset>
                 </form>
             </div>
-        </div>
-
-        
+        </div>        
     </div>
+
+    <footer class="footer">
+        <p>Data de início: 11/04/2022 | Última versão: 14/05/2022</p>
+    </footer>
 
 
 
