--- a/excluirchamado.html
+++ b/excluirchamado.html
@@ -27,17 +27,17 @@
         <nav id="sidebar">
             <ul class="list-unstyled components">
                 <h2>Help Desk</h2>
-                <li >
-                    <a href="chamado.html">Chamados</a>
-                </li>
                 <li>
                     <a href="novochamado.html">Novo Chamado</a>
                 </li>
-                <li >
-                    <a href="editarchamado.html">Editar Chamado</a>
                 <li>
-                    <li class="selecionado">
-                        <a href="excluirchamado.html">Excluir Chamado</a>
+                    <a href="editarchamado.html">Editar Chamado</a>
+                </li>
+                <li class="selecionado">
+                    <a href="excluirchamado.html">Excluir Chamado</a>
+                <li>
+                    <li>
+                        <a href="chamado.html">Listar Chamados</a>
                 <li>
                     <a href="index.html">Sair</a>
                 </li>
@@ -61,9 +61,11 @@
                 
             </div>
         </div>
-
-        
     </div>
+
+    <footer class="footer">
+        <p>Data de início: 11/04/2022 | Última versão: 14/05/2022</p>
+    </footer>
 
 
 
