correção pág. html, banner js, data e hora js

--- a/novochamado.html
+++ b/novochamado.html
@@ -134,7 +134,7 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
+                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
                                             <option for="txtStatus" selected>Status:</option>
                                             <option for="txtStatus" value="Alta">Aguardando Suporte</option>
                                             <option for="txtStatus" value="Media">Em Análise</option>
