--- a/chamado.html
+++ b/chamado.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/chamados.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="js/chamados.js"></script>
+    <script defer src="./js/chamados.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
@@ -52,6 +52,10 @@
                         <i class="fas fa-align-left"></i>
                     </button>
             </nav>
+
+            <fieldset>
+                <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Listar Chamados</b></legend>
+            </fieldset>
      
             <div >
                 <table id="tblListar">
