Adic linha status e ajuste data rodapé
Adicionada linha no campo status (Chamado Aberto) e data última atualização ajustada.

--- a/novochamado.html
+++ b/novochamado.html
@@ -134,11 +134,12 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
-                                            <option for="txtStatus" selected>Status:</option>
-                                            <option for="txtStatus" value="Alta">Aguardando Suporte</option>
-                                            <option for="txtStatus" value="Media">Em Análise</option>
-                                            <option for="txtStatus" value="Baixa">Em Atendimento</option>
+                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
+                                            <option for="txtStatus" >Status:</option>
+                                            <option for="txtStatus" value="Chamado Aberto" selected>Chamado Aberto</option>
+                                            <option for="txtStatus" value="Aguardando Suporte">Aguardando Suporte</option>
+                                            <option for="txtStatus" value="Em análise">Em Análise</option>
+                                            <option for="txtStatus" value="Em Atendimento">Em Atendimento</option>
                                         </select>
                                     </li>
                                 </div>
@@ -155,7 +156,7 @@
     </div>
 
     <footer class="footer">
-        <p>Data de início: 11/04/2022 | Última versão: 14/05/2022</p>
+        <p>Data de início: 11/04/2022 | Última versão: 13/05/2022</p>
     </footer>
 
 
