--- a/novochamado.html
+++ b/novochamado.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="css/chamados.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="js/chamados.js"></script>
+    <script defer src="js/editchamado.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="sb1">
-        <!-- Sidebar -->
+        <!-- Sidebar  -->
         <nav id="sidebar">
             <ul class="list-unstyled components">
                 <h2>Help Desk</h2>
@@ -40,10 +40,11 @@
                         <a href="chamado.html">Listar Chamados</a>
                 <li>
                     <a href="index.html">Sair</a>
-                </li>                    
+                </li>
             </ul>
+            <p class="versao">V.10/05/2022</p>
         </nav>
-        <!-- Page Content  -->
+        <!-- Menu Lateral -->
         <div id="content">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -52,17 +53,16 @@
                         <i class="fas fa-align-left"></i>
                     </button>
             </nav>
-     
-
-            <div>
+            <!-- Formulario -->
+            <div class="container">
                 <form id="frmCadastro">
                     <fieldset>
-                        <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Novo Chamado</b></legend>
+                        <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Editar Chamado</b></legend>
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
                                     <label class="form-label" for="txtCodigo">Código:</label>
-                                    <input class="form-control"type="number" id="txtCodigo" disabled value="1"/>
+                                    <input class="form-control"type="number" id="txtCodigo" disabled/>
                             </div>
                             </div>
                             <div class="col-lg-4">
@@ -79,7 +79,6 @@
                             </div>
                         </div>
                         <br>
-
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
@@ -97,7 +96,7 @@
                                 <div class=" text-left" style="padding-top: 30px;">
                                     <li>
                                     <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
-                                        <option for="txtCategoria" selected>Categoria do Problema:</option>
+                                        <option for="txtCategoria" selected disabled value="">Categoria do Problema:</option>
                                         <option for="txtCategoria" value="Hardware">Hardware</option>
                                         <option for="txtCategoria" value="Software">Software</option>
                                         <option for="txtCategoria" value="telefonia">Telefonia</option>
@@ -111,7 +110,7 @@
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
                                         <select id="txtPrioridade"  class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
-                                            <option for="txtPrioridade" selected>Prioridade:</option>
+                                            <option for="txtPrioridade" selected disabled value="">Prioridade:</option>
                                             <option for="txtPrioridade" value="Alta">Alta</option>
                                             <option for="txtPrioridade" value="Media">Media</option>
                                             <option for="txtPrioridade" value="Baixa">Baixa</option>
@@ -126,7 +125,7 @@
                             <div class="col-lg-8">
                                 <div class="form-group text-left">
                                     <li>
-                                        <label for="txtDescricao" class="form-label">Descrição do Problema:</label>
+                                        <label for="txtDescricao" class="form-label" >Descrição do Problema:</label>
                                         <textarea class="form-control" id="txtDescricao" rows="3" required></textarea>
                                     </li>
                                 </div>
@@ -136,7 +135,7 @@
                                     <li>
                                         <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
                                             <option for="txtStatus" >Status:</option>
-                                            <option for="txtStatus" value="Chamado Aberto" selected>Chamado Aberto</option>
+                                            <option for="txtStatus" selected value="Chamado Aberto">Chamado Aberto</option>
                                             <option for="txtStatus" value="Aguardando Suporte">Aguardando Suporte</option>
                                             <option for="txtStatus" value="Em análise">Em Análise</option>
                                             <option for="txtStatus" value="Em Atendimento">Em Atendimento</option>
@@ -146,7 +145,7 @@
                             </div>
 
                         </div>
-                        <li style="padding-top: 31px;">
+                        <li style="padding-top: 31px; padding-bottom: 30px;">
                             <input type="submit" value="Salvar" id="btnSalvar"/>
                         </li>
                     </fieldset>
@@ -155,9 +154,6 @@
         </div>        
     </div>
 
-    <footer class="footer">
-        <p>Data de início: 11/04/2022 | Última versão: 13/05/2022</p>
-    </footer>
 
 
 
