--- a/novochamado.html
+++ b/novochamado.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Área do Usuário</title>
+    <title>Help Desk</title>
 
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -57,7 +57,7 @@
             <div class="container">
                 <form id="frmCadastro">
                     <fieldset>
-                        <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Editar Chamado</b></legend>
+                        <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Novo Chamado</b></legend>
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
