txtCategoria estava dando erro pois no js estava com letras de tamanhos diferentes

--- a/novochamado.html
+++ b/novochamado.html
@@ -93,16 +93,16 @@
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <div class=" text-left" style="padding-top: 30px;">
+                                <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                    <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
-                                        <option for="txtCategoria" selected disabled value="">Categoria do Problema:</option>
-                                        <option for="txtCategoria" value="Hardware">Hardware</option>
-                                        <option for="txtCategoria" value="Software">Software</option>
-                                        <option for="txtCategoria" value="telefonia">Telefonia</option>
-                                        <option for="txtCategoria" value="Rede">Rede</option>
-                                        <option for="txtCategoria" value="Internet">Internet</option>
-                                    </select>
+                                        <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
+                                            <option for="txtCategoria" selected disabled value="">Categoria do Problema:</option>
+                                            <option for="txtCategoria" value="Hardware">Hardware</option>
+                                            <option for="txtCategoria" value="Software">Software</option>
+                                            <option for="txtCategoria" value="telefonia">Telefonia</option>
+                                            <option for="txtCategoria" value="Rede">Rede</option>
+                                            <option for="txtCategoria" value="Internet">Internet</option>
+                                        </select>
                                     </li>
                                 </div>
                             </div>
