--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help Desk</title>
+    <title>Menu</title>
     <!-- Biblioteca do CSS bootstrap(objetivo responsivo)-->
     <link href="css/login.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,6 +33,6 @@
           </div>
         </div>
       </div>
-      
+
 </body>
 </html>
