--- a/novochamado.html
+++ b/novochamado.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Help Desk</title>
+    <title>Área do Usuário</title>
 
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="css/chamados.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="js/editchamado.js"></script>
+    <script defer src="js/chamados.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="sb1">
-        <!-- Sidebar  -->
+        <!-- Sidebar -->
         <nav id="sidebar">
             <ul class="list-unstyled components">
                 <h2>Help Desk</h2>
@@ -40,11 +40,11 @@
                         <a href="chamado.html">Listar Chamados</a>
                 <li>
                     <a href="index.html">Sair</a>
-                </li>
+                </li>                    
             </ul>
-            <p class="versao">V.10/05/2022</p>
+            <p class="versao"> V. 13/05/2022</p>
         </nav>
-        <!-- Menu Lateral -->
+        <!-- Page Content  -->
         <div id="content">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -53,8 +53,9 @@
                         <i class="fas fa-align-left"></i>
                     </button>
             </nav>
-            <!-- Formulario -->
-            <div class="container">
+     
+
+            <div>
                 <form id="frmCadastro">
                     <fieldset>
                         <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Novo Chamado</b></legend>
@@ -62,7 +63,7 @@
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
                                     <label class="form-label" for="txtCodigo">Código:</label>
-                                    <input class="form-control"type="number" id="txtCodigo" disabled/>
+                                    <input class="form-control"type="number" id="txtCodigo" disabled value="1"/>
                             </div>
                             </div>
                             <div class="col-lg-4">
@@ -79,6 +80,7 @@
                             </div>
                         </div>
                         <br>
+
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
@@ -93,16 +95,16 @@
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <div class="form-group text-left" style="padding-top: 30px;">
+                                <div class=" text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
-                                            <option for="txtCategoria" selected disabled value="">Categoria do Problema:</option>
-                                            <option for="txtCategoria" value="Hardware">Hardware</option>
-                                            <option for="txtCategoria" value="Software">Software</option>
-                                            <option for="txtCategoria" value="telefonia">Telefonia</option>
-                                            <option for="txtCategoria" value="Rede">Rede</option>
-                                            <option for="txtCategoria" value="Internet">Internet</option>
-                                        </select>
+                                    <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
+                                        <option for="txtCategoria" selected disabled value="">Categoria do Problema:</option>
+                                        <option for="txtCategoria" value="Hardware">Hardware</option>
+                                        <option for="txtCategoria" value="Software">Software</option>
+                                        <option for="txtCategoria" value="Telefonia">Telefonia</option>
+                                        <option for="txtCategoria" value="Rede">Rede</option>
+                                        <option for="txtCategoria" value="Internet">Internet</option>
+                                    </select>
                                     </li>
                                 </div>
                             </div>
@@ -125,7 +127,7 @@
                             <div class="col-lg-8">
                                 <div class="form-group text-left">
                                     <li>
-                                        <label for="txtDescricao" class="form-label" >Descrição do Problema:</label>
+                                        <label for="txtDescricao" class="form-label">Descrição do Problema:</label>
                                         <textarea class="form-control" id="txtDescricao" rows="3" required></textarea>
                                     </li>
                                 </div>
@@ -133,19 +135,20 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
-                                            <option for="txtStatus" >Status:</option>
+                                        <select class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
+                                            <option for="txtStatus" >Status: </option>
                                             <option for="txtStatus" selected value="Chamado Aberto">Chamado Aberto</option>
                                             <option for="txtStatus" value="Aguardando Suporte">Aguardando Suporte</option>
-                                            <option for="txtStatus" value="Em análise">Em Análise</option>
+                                            <option for="txtStatus" value="Em Análise">Em Análise</option>
                                             <option for="txtStatus" value="Em Atendimento">Em Atendimento</option>
+                                            <option for="txtStatus" value="Chamado Encerrado">Chamado Encerrado</option>
                                         </select>
                                     </li>
                                 </div>
                             </div>
 
                         </div>
-                        <li style="padding-top: 31px; padding-bottom: 30px;">
+                        <li style="padding-top: 31px;">
                             <input type="submit" value="Salvar" id="btnSalvar"/>
                         </li>
                     </fieldset>
@@ -154,10 +157,7 @@
         </div>        
     </div>
 
-
-
-
-    <!-- jQuery CDN - Slim version (=without AJAX) -->
+        <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript">
         $(document).ready(function () {
