--- a/editarchamado.html
+++ b/editarchamado.html
@@ -42,9 +42,9 @@
                     <a href="index.html">Sair</a>
                 </li>
             </ul>
-            <p class="versao">V.10/05/2022</p>
+            <p class="versao">V.13/05/2022</p>
         </nav>
-        <!-- Menu Lateral -->
+        <!-- Page Content  -->
         <div id="content">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -53,8 +53,9 @@
                         <i class="fas fa-align-left"></i>
                     </button>
             </nav>
-            <!-- Formulario -->
-            <div class="container">
+     
+            <div >
+
                 <form id="frmCadastro">
                     <fieldset>
                         <legend class="pl-1 pr-1" id="leg_pes" style="padding-bottom: 20px;"><b>Editar Chamado</b></legend>
@@ -68,22 +69,23 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left">
                                     <label class="form-label"for="txtNome">Nome:</label>
-                                    <input class="form-control" type="text" id="txtNome" required/>
+                                    <input class="form-control" type="text" id="txtNome"/>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group text-left">
                                     <label class="form-label" for="txtEmail">Email:</label>
-                                    <input class="form-control"  type="email" id="txtEmail" required/>
+                                    <input class="form-control"  type="email" id="txtEmail"/>
                                 </div>
                             </div>
                         </div>
                         <br>
+
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="form-group text-left">
                                     <label class="form-label" for="txtData">Data do Chamado:</label>
-                                    <input class="form-control" type="date" id="txtData" disabled />
+                                    <input class="form-control" type="date" id="txtData" disabled/>
                                 </div>
                             </div>
                             <div class="col-lg-2">
@@ -95,11 +97,11 @@
                             <div class="col-lg-4">
                                 <div class=" text-left" style="padding-top: 30px;">
                                     <li>
-                                    <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
-                                        <option for="txtCategoria" selected disabled value="">Categoria do Problema:</option>
+                                    <select id="txtCategoria" class="form-select" aria-label="Default select example" style="padding-top: 10px;" >
+                                        <option for="txtCategoria" selected>Categoria do Problema:</option>
                                         <option for="txtCategoria" value="Hardware">Hardware</option>
                                         <option for="txtCategoria" value="Software">Software</option>
-                                        <option for="txtCategoria" value="telefonia">Telefonia</option>
+                                        <option for="txtCategoria" value="Telefonia">Telefonia</option>
                                         <option for="txtCategoria" value="Rede">Rede</option>
                                         <option for="txtCategoria" value="Internet">Internet</option>
                                     </select>
@@ -109,8 +111,8 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtPrioridade" class="form-select" aria-label="Default select example" style="padding-top: 10px;" required>
-                                            <option for="txtPrioridade" selected disabled value="">Prioridade:</option>
+                                        <select id="txtPrioridade"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
+                                            <option for="txtPrioridade" selected>Prioridade:</option>
                                             <option for="txtPrioridade" value="Alta">Alta</option>
                                             <option for="txtPrioridade" value="Media">Media</option>
                                             <option for="txtPrioridade" value="Baixa">Baixa</option>
@@ -126,19 +128,20 @@
                                 <div class="form-group text-left">
                                     <li>
                                         <label for="txtDescricao" class="form-label">Descrição do Problema:</label>
-                                        <textarea class="form-control" id="txtDescricao" rows="3" required></textarea>
+                                        <textarea class="form-control" id="txtDescricao" rows="3"></textarea>
                                     </li>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
-                                            <option for="txtStatus" >Status:</option>
-                                            <option for="txtStatus" selected value="Chamado Aberto">Chamado Aberto</option>
+                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
+                                            <option for="txtStatus" selected>Status:</option>
+                                            <option for="txtStatus" value="Chamado Aberto">Chamado Aberto</option>
                                             <option for="txtStatus" value="Aguardando Suporte">Aguardando Suporte</option>
-                                            <option for="txtStatus" value="Em análise">Em Análise</option>
+                                            <option for="txtStatus" value="Em Análise">Em Análise</option>
                                             <option for="txtStatus" value="Em Atendimento">Em Atendimento</option>
+                                            <option for="txtStatus" value="Chamado Encerrado">Chamado Encerrado</option>
                                         </select>
                                     </li>
                                 </div>
@@ -151,17 +154,15 @@
                     </fieldset>
                 </form>
 
-                <!--Lista/Tabela-->
                 <div style="overflow-x:auto">
                     <table id="tblListar">
-
-                    </table>
+                    </table>               
                 </div>
             </div>
         </div>
     </div>
 
-
+    
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript">
