desabilitanto o status da pagia editar

--- a/editarchamado.html
+++ b/editarchamado.html
@@ -135,9 +135,9 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select id="txtStatus"  class="form-select" aria-label="Default select example" style="padding-top: 10px;">
-                                            <option for="txtStatus" selected>Status:</option>
-                                            <option for="txtStatus" value="Chamado Aberto">Chamado Aberto</option>
+                                        <select class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
+                                            <option for="txtStatus" >Status: </option>
+                                            <option for="txtStatus" selected value="Chamado Aberto">Chamado Aberto</option>
                                             <option for="txtStatus" value="Aguardando Suporte">Aguardando Suporte</option>
                                             <option for="txtStatus" value="Em Análise">Em Análise</option>
                                             <option for="txtStatus" value="Em Atendimento">Em Atendimento</option>
