--- a/editarchamado.html
+++ b/editarchamado.html
@@ -135,7 +135,7 @@
                             <div class="col-lg-4">
                                 <div class="form-group text-left" style="padding-top: 30px;">
                                     <li>
-                                        <select class="form-select" aria-label="Default select example" style="padding-top: 10px;" disabled>
+                                        <select class="form-select" aria-label="Default select example" style="padding-top: 10px;">
                                             <option for="txtStatus" >Status: </option>
                                             <option for="txtStatus" selected value="Chamado Aberto">Chamado Aberto</option>
                                             <option for="txtStatus" value="Aguardando Suporte">Aguardando Suporte</option>
